FIX: Border Color for <AllowedNote /> on Piano & Banjo (more contrast, more better)

--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ select {
 
 .Banjo .AllowedNote,
 .Piano .AllowedNote {
-	border-color: #cccccc;
+	border-color: oklch(65% 0.20 25);
 }
 
 .Guitar {
